# CMakeCI-example

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/example/: CMakeLists.txt  example.cpp  example.h
test/: CMakeLists.txt
test/example/: CMakeLists.txt  example_test.cpp
